2004-07-15  Nick Clifton  <nickc@redhat.com>

	* configure.in: Accept armbe as a big-endian arm configuration.
	* configure: Regenerate.

2004-07-13  Thomas Nystrom  <thn@saeab.se>

	* config/tc-i386.c (T_SHIFTOP): New constant.
	(intel_e05_1): Handle '&', '|' and T_SHIFTOP.
	(intel_el1): Handle '~'.
	(intel_get_token): Handle '<>', '&', '|' and '~'.

2004-07-13  Nick Clifton <nickc@redhat.com>

	(md_assemble): Remove spurious newline from end of as_bad error
	message.
	(intel_e05_1): Likewise.
	(intel_e11): Likewise.
	(intel_match_token): Likewise.

2004-07-11  Andreas Schwab  <schwab@suse.de>

	* config/tc-m68k.c: Convert to C90.  Remove redundant
	declarations.  Indentation fixup.
	[M68KCOFF]: Include "obj-coff.h" instead of declaring
	obj_coff_section ourselves.
	
2004-07-09  James E Wilson  <wilson@specifixinc.com>

	* config/tc-ia64.c (default_big_endian): New.
	(dot_byteorder, md_begin): Use it.
	(md_parse_option): Set it.
	
2004-07-09  Nick Clifton  <nickc@redhat.com>

	* configure.in: Change sh-sybmian-elf to sh-*-symbianelf.
	* configure: Regenerate.
	* NEWS: Change sh-sybmian-elf to sh-*-symbianelf.
	* config/tc-sh.c (sh_elf_final_processing): Use renamed version of
	sh_find_elf_flags if necessary.

2004-07-08  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (mips_fix_adjustable): If the full addend is
	going to be split into more than one in-place addend, return 0
	for relocations against mergeable sections.  Associate comments
	with code.

2004-07-07  Tomer Levi  <Tomer.Levi@nsc.com>

	* Makefile.am (CPU_TYPES): Add crx.
	(TARGET_CPU_CFILES): Add config/tc-crx.c.
	(TARGET_CPU_HFILES): Add config/tc-crx.h.
	(DEPTC_crx_elf): New target.
	(DEPOBJ_crx_elf): Likewise.
	(DEP_crx_elf): Likewise.
	* Makefile.in: Regenerate.
	* configure.in: Add crx* target.
	* configure: Regenerate.
	* config/tc-crx.c: New file.
	* config/tc-crx.h: New file.
	* NEWS: Mention new target.

2004-07-06  Nick Clifton  <nickc@redhat.com>
